basic-stream-service/infra/kustomize/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.name: basic-stream-service
  name: basic-stream-service
  namespace: basic-stream-service
spec:
  selector:
    matchLabels:
      app.name: basic-stream-service
  template:
    metadata:
      labels:
        app.name: basic-stream-service
    spec:
      containers:
        - name: basic-stream-service
          image: theocerutti/viteo-basic-stream-service:latest
          ports:
            - containerPort: 3000
