basic-stream-service/infra/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: basic-stream-service

  name: basic-stream-service
  namespace: basic-stream-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 50051
  selector:
    app.name: basic-stream-service
  type: ClusterIP
