basic-stream-service/infra/kustomize/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: basic-stream-service
  namespace: basic-stream-service
  annotations:
    konghq.com/protocol: grpc
spec:
  ports:
    - name: grpc
      port: 80
      targetPort: 3000
  selector:
    app.name: basic-stream-service
  type: ClusterIP
